--- a/style.css
+++ b/style.css
@@ -72,7 +72,8 @@ body {
 #losing-item.show {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  aspect-ratio: 1 / 1;
+  height: 25%;
 }
 
 .paper-parts.show {
@@ -80,18 +81,17 @@ body {
   background-image: url("assets/paper.png");
   width: 100%;
   height: 50%;
-  background-size: 50%;
+  background-size: 100% 200%;
   background-repeat: no-repeat;
+  transform-origin: 20% center;
 }
 
 .paper-parts.top {
-  transform-origin: center left;
   animation: 1s linear 1s forwards running cut-paper-top;
 }
 
 .paper-parts.bottom {
   background-position: 0% 100%;
-  transform-origin: center left;
   animation: 1s linear 1s forwards running cut-paper-bottom;
 }
 
