--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 .scissors-cutting,
 .paper-covering,
 .rock-breaking,
+.losing-rock,
 #result,
 #retry {
   display: none;
@@ -152,6 +153,14 @@ body {
   height: 100%;
   animation: 1s linear 1s forwards running;
   animation-name: paper-covering;
+}
+
+.losing-rock.show {
+  display: block;
+  background-image: url("assets/rock.png");
+  background-size: contain;
+  width: 100%;
+  height: 100%;
 }
 
 .rock-breaking.show {
